# ai-placement-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml  secrets.toml.example
backend/: main.py
backend/api/routes/: analysis.py  analytics.py  career.py  interview.py  resume.py  roadmap.py
backend/data/: projects.json  roles.json
backend/database/: crud.py  db.py  schema.py
backend/services/: ai_client.py  ats_scorer.py  career_coach.py  explainability.py  interview_gen.py  jd_matcher.py  jd_parser.py  mock_interview.py  project_recommender.py  prompts.py  readiness_scorer.py  recruiter_insights.py  resume_parser.py  roadmap_gen.py  semantic_ranker.py  signal_scorer.py  skill_analyzer.py
backend/utils/: config.py  file_handler.py  validators.py
frontend/: app.py
frontend/components/: charts.py  styles.py
frontend/pages/: 01_Resume_Analysis.py  02_Skill_Gap.py  03_Readiness_Score.py  04_Interview_Prep.py  05_Mock_Interview.py  06_Learning_Roadmap.py  07_JD_Matcher.py  08_Career_Coach.py  09_Projects.py  10_Analytics.py  11_Candidate_Ranker.py  12_AI_Settings.py
tests/: test_ai_settings.py  test_ats_scorer.py  test_candidate_ranker.py  test_production_hardening.py  test_resume_parser.py  test_skill_analyzer.py
