[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-placement-copilot"
version = "1.0.0"
description = "AI-powered career placement readiness platform"
dependencies = [
    "fastapi",
    "uvicorn"
]

[tool.vercel]
entrypoint = "backend.main:app"
